--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                     <h4>Bosch India</h4>
                     <h4>2022-2023</h4>
 
-                    <p>Led product validation and inspection for new product launches, implemented quality control techniques, and managed process validation.</p>
+                    <p>Led product validation and inspection for new product launches, implemented quality control techniques, and managed process validation.</p><br>
                   </div>
                   <div class="timeline-content">
                     <h3>Electronics System Designer</h3>
